ci(java): Update to Java 17 as default and enforce it
Signed-off-by: Helio Chissini de Castro <heliocastro@gmail.com>